# cakelens-v5

./: README.md  pyproject.toml
.circleci/: config.yml
cakelens/: constants.py  data_types.py  dataset.py  datasets.py  detect.py  model.py
tests/: test_detect.py
tests/fixtures/: ai-gen00.credit.txt  non-ai-gen00.credit.txt
